--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:christopherkodama@gmail.com">email</a></li>
+	        		<li><a href="https://ckhordiasma.github.io">github.com/ckhordiasma</a></li>
+
 				</ul>
 			</footer>
 		</body>
