changed github link to go to github page rather than ckhordiasma.github.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:christopherkodama@gmail.com">email</a></li>
-	        		<li><a href="https://ckhordiasma.github.io">github.com/ckhordiasma</a></li>
+	        		<li><a href="https://github.com/ckhordiasma">github.com/ckhordiasma</a></li>
 
 				</ul>
 			</footer>
