--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!-- link to syntax highlighting stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/syntax.css">
 		</head>
 		<body>
 			<nav>
