--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 	<html>
 		<head>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144733476-1"></script>
+			<script>
+		 		 window.dataLayer = window.dataLayer || [];
+				 function gtag(){dataLayer.push(arguments);}
+				 gtag('js', new Date());
+				 gtag('config', 'UA-144733476-1');
+			</script>
+
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
