added comments link to all pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,10 @@ layout: default
 
 <div class="post">
   {{ content }}
+
+
+  <p>
+    Have feedback on this post? <a href=https://github.com/ckhordiasma/ckhordiasma.github.io/issues/{{ page.post_id }}>Comment Here</a>
+  </p>
+
 </div>
