--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,10 @@ layout: default
 <div class="post">
   {{ content }}
 
-
+  {% if page.post_id %}
   <p>
     Have feedback on this post? <a href=https://github.com/ckhordiasma/ckhordiasma.github.io/issues/{{ page.post_id }}>Comment Here</a>
   </p>
+  {% endif %}
 
 </div>
