--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:christopherkodama@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/ckhordiasma">github.com/ckhordiasma</a></li>
-
+					<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
+					<li>btc/eth/ltc/doge: xoid.eth</li>
 				</ul>
 			</footer>
 		</body>
