Update cryptio again

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 	    		<ul>
 	        		<li><a href="https://github.com/ckhordiasma">github.com/ckhordiasma</a></li>
 					<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
-					<li>crypto: <a href="https://app.ens.domains/name/xoid.eth">xoid.eth</a></li>
+					<li>crypto: <a href="https://ud.me/xoid.wallet">xoid.wallet</a></li>
 				</ul>
 			</footer>
 		</body>
