--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,10 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="https://github.com/ckhordiasma">github.com/ckhordiasma</a></li>
+	        		<li><a href="https://github.com/ckhordiasma">github/ckhordiasma</a></li>
+	        		<li><a href="https://linkedin.com/in/chkodama">linkedin/chkodama</a></li>
 					<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
-					<li>crypto: <a href="https://ud.me/xoid.wallet">xoid.wallet</a></li>
+					<li><a href="https://www.blockonomics.co/#/search?q=37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW" onclick="navigator.clipboard.writeText('37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW')">bitcoin</a></li>
 				</ul>
 			</footer>
 		</body>
