throwing in tailwind css

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,17 @@
+@tailwind base;
+@tailwind utilities;
+@tailwind components;
+
+
+
+
 body {
     margin: 60px auto;
     width: 70%;
+    font-family: 'Inter var'
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:  'Inter var';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -21,7 +29,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:  'Inter var';
 }
 p {
     font-size: 1.5em;
