--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link to syntax highlighting stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/syntax.css">
+			<!-- TailwindCSS and Inter Font-->
+			<link rel="stylesheet" href="/css/main.css">
+			<link rel="stylesheet" href="/css/tailwind.css">
+			<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 		</head>
 		<body>
 			<nav>
