made a better looking navbar

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 
 
-
+/*
 body {
     margin: 60px auto;
     width: 70%;
@@ -69,3 +69,4 @@ div.highlight code {
 img {
     max-width: 100%;
 }
+    ***/
