--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,35 @@
 				 function gtag(){dataLayer.push(arguments);}
 				 gtag('js', new Date());
 				 gtag('config', 'UA-144733476-1');
-
+				 function addClass(node, name) {
+					const classes = new Set(node.className.split(" "))
+					classes.add(name);
+					node.className = Array.from(classes).join(" ")
+					return node
+				 }
+				 function delClass(node, name) {
+					const classes = new Set(node.className.split(" "))
+					classes.delete(name);
+					node.className = Array.from(classes).join(" ")
+					return node
+				 }
+				 function checkClass(node, name){
+					const classes = new Set(node.className.split(" "))
+					return classes.has(name)
+				 }
 				 window.onload = function () {
 					const navbar = document.getElementById('navbar')
 					const path = window.location.pathname.replaceAll("/","")
 					const link = navbar.querySelector(`[href="/${path}"]`)
-					const classes = new Set(link.className.split(" "))
-					classes.add("md:text-blue-700")
-					link.className = Array.from(classes).join(" ")
+					addClass(link, "md:text-blue-700")
+				 }
+				 function navbarToggle(){
+					const navbar = document.getElementById("navbar-default")
+					if (checkClass(navbar, "hidden")) {
+						delClass(navbar, "hidden")
+					} else {
+						addClass(navbar, "hidden")
+					}
 				 }
 			</script>
 
@@ -36,36 +57,38 @@
 				<a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
 					<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">xoid.net</span>
 				</a>
-				<button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+				<button data-collapse-toggle="navbar-default" type="button" 
+				class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" 
+				aria-controls="navbar-default" aria-expanded="false" onclick="navbarToggle()">
 					<span class="sr-only">Open main menu</span>
 					<svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
 						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
 					</svg>
 				</button>
 				<div class="hidden w-full md:block md:w-auto" id="navbar-default">
-				<ul id='navbar' class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+				<ul id='navbar' class="nav-ul">
 					<li>
-					<a href="/" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" aria-current="page">
+					<a href="/" class="nav-link" >
 						Home</a>
 					</li>
 					<li>
-					<a href="/project-list" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+					<a href="/project-list" class="nav-link">
 						Projects</a>
 					</li>
 					<li>
-					<a href="/cv" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+					<a href="/cv" class="nav-link">
 						CV</a>
 					</li>
 					<li>
-					<a href="/blog" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+					<a href="/blog" class="nav-link">
 						Blog</a>
 					</li>
 					<li>
-					<a href="/about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+					<a href="/about" class="nav-link">
 						About</a>
 					</li>
 					<li>
-					<a href="/contact" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+					<a href="/contact" class="nav-link">
 						Contact</a>
 					</li>
 				</ul>
@@ -73,17 +96,17 @@
 			</div>
 			</nav>
 	
-			<div class="container">
+			<div class="max-w-screen-xl flex flex-wrap items-center mx-auto p-4">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="https://github.com/ckhordiasma">github/ckhordiasma</a></li>
-	        		<li><a href="https://linkedin.com/in/chkodama">linkedin/chkodama</a></li>
-					<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
-					<li><a href="https://www.blockonomics.co/#/search?q=37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW" onclick="navigator.clipboard.writeText('37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW')">bitcoin</a></li>
+			<footer class="max-w-screen-xl flex flex-wrap items-center mx-auto border-t-2 border-gray-300 pt-2">
+	    		<ul class="font-light text-xs text-gray-500 flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+	        		<li><a href="https://github.com/ckhordiasma" >github/ckhordiasma</a></li>
+	        		<li><a href="https://linkedin.com/in/chkodama" >linkedin/chkodama</a></li>
+					<li><a href="https://www.buymeacoffee.com/ckhordiasma" >buy me a coffee</a></li>
+					<li><a href="https://www.blockonomics.co/#/search?q=37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW"   onclick="navigator.clipboard.writeText('37u4WSCQ8uy6V4HuPEVhPeUoFiVThA3GTW')">bitcoin</a></li>
 				</ul>
 			</footer>
 		</body>
