--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,23 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-  {{ content }}
+<div class="max-w-3xl mx-auto">
+  <main>
+    <article class="relative pt-10">
+      <h1 class="text-2xl font-extrabold tracking-tight text-slate-900 dark:text-slate-200 md:text-3xl ">
+        {{ page.title}}
+      </h1>
+      <div class="text-sm leading-6">
+        <dl>
+          <dt class="sr-only">Date</dt>
+          <dd class="absolute top-0 inset-x-0 text-slate-700 dark:text-slate-400"><time
+              datetime="2024-06-21T15:00:00.000Z">{{ page.date | date_to_string }}</time></dd>
+        </dl>
+      </div>
+      <div class="mt-12 prose prose-slate dark:prose-dark">
+        <p> {{ content }} </p>
+      </div>
+    </article>
+  </main>
 </div>
