--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -613,6 +613,11 @@ p {
   bottom: -0.625rem;
 }
 
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -672,6 +677,10 @@ p {
 
 .mt-px {
   margin-top: 1px;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .line-clamp-2 {
@@ -750,6 +759,10 @@ p {
 
 .max-w-\[52rem\] {
   max-width: 52rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .flex-col {
@@ -870,6 +883,10 @@ p {
 
 .pb-28 {
   padding-bottom: 7rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-2xl {
@@ -1849,6 +1866,11 @@ img {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:text-blue-700 {
