making front page look better, making styles more consistent

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,9 @@
         @apply block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent
 
     }
+    .page-title {
+        @apply mb-4 text-3xl sm:text-4xl tracking-tight text-slate-900 font-extrabold dark:text-slate-200
+    }
 }
 
 
