made it look ok in dark mode

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ layout: default
               datetime="2024-06-21T15:00:00.000Z">{{ page.date | date_to_string }}</time></dd>
         </dl>
       </div>
-      <div class="mt-12 prose prose-slate dark:prose-dark">
-        <p> {{ content }} </p>
+      <div class="mt-12 prose prose-zinc dark:prose-invert">
+        {{ content }} 
       </div>
     </article>
   </main>
