--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
 	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 
-<body>
+<body class="bg-white dark:bg-zinc-800">
 
-	<nav class="bg-slate-100 border-gray-200 dark:bg-gray-900">
+	<nav class="bg-slate-100 border-gray-200 dark:bg-gray-950">
 		<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 			<a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
 				<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">xoid.net</span>
@@ -105,8 +105,7 @@
 			{{ content }}
 	</div><!-- /.container -->
 	<footer class=" max-w-screen-xl flex flex-wrap items-center mx-auto border-t-2 border-gray-300 pt-2">
-		<ul
-			class="font-light text-xs text-gray-500 flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+		<ul class="font-light text-xs text-gray-500 flex flex-col p-4 md:p-0 mt-4 border border-gray-100   md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700 dark:text-gray-200">
 			<li><a href="https://github.com/ckhordiasma">github/ckhordiasma</a></li>
 			<li><a href="https://linkedin.com/in/chkodama">linkedin/chkodama</a></li>
 			<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
