--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,19 @@
         @apply text-3xl;
     }
     h2 {
-        @apply text-xl;
+        @apply text-3xl dark:text-white
+    }
+    h3 {
+        @apply text-lg dark:text-white
     }
     p {
-        @apply text-lg mt-4;
+        @apply text-lg mt-4 dark:text-white;
     }
 }
 
 @layer components {
     .nav-ul {
-        @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700
+        @apply font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0  dark:border-gray-700
     }
     .nav-link {
         @apply block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent
