updated google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-<head> 
+<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144733476-1"></script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NECKFMNETY"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-		gtag('config', 'UA-144733476-1');
+
+		gtag('config', 'G-NECKFMNETY');
+	</script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script>
 		function addClass(node, name) {
 			const classes = new Set(node.className.split(" "))
 			classes.add(name);
@@ -98,10 +104,11 @@
 
 	<div class="max-w-screen-xl flex flex-wrap items-center mx-auto p-4">
 
-			{{ content }}
+		{{ content }}
 	</div><!-- /.container -->
 	<footer class=" max-w-screen-xl flex flex-wrap items-center mx-auto border-t-2 border-gray-300 pt-2">
-		<ul class="font-light text-xs text-gray-500 flex flex-col p-4 md:p-0 mt-4 border border-gray-100   md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700 dark:text-gray-200">
+		<ul
+			class="font-light text-xs text-gray-500 flex flex-col p-4 md:p-0 mt-4 border border-gray-100   md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700 dark:text-gray-200">
 			<li><a href="https://github.com/ckhordiasma">github/ckhordiasma</a></li>
 			<li><a href="https://linkedin.com/in/chkodama">linkedin/chkodama</a></li>
 			<li><a href="https://www.buymeacoffee.com/ckhordiasma">buy me a coffee</a></li>
