--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1295,6 +1295,14 @@ select {
   padding-top: 2rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2655,6 +2663,14 @@ select {
 
   .md\:pl-4 {
     padding-left: 1rem;
+  }
+
+  .md\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-2xl {
